# challenge-fun-app

./: .eslintrc.js  .gitignore  APP_SUMMARY.md  App.tsx  BACKEND_ARCHITECTURE.md  BACKEND_INTEGRATION_GUIDE.md  BACKEND_SETUP.md  ENV_VARIABLES.md  EXPECTED_BEHAVIOR.md  FINAL_PROJECT_STATUS.md  FINAL_STATUS.md  FIREBASE_SETUP.md  FIREBASE_SETUP_GUIDE.md  FIX_403_FORBIDDEN.md  GOOGLE_FIT_SETUP.md  GOOGLE_FIT_TROUBLESHOOTING.md  GOOGLE_FIT_WEB_LIMITATIONS.md  INTEGRATION_COMPLETE.md  INTEGRATION_GUIDE.md  MONOREPO_RESTRUCTURE_PLAN.md  MONOREPO_SETUP_GUIDE.md  OAUTH_FLOW_EXPLANATION.md  PROJECT_SUMMARY.md  QUICK_FIX_GUIDE.md  QUICK_START.md  README.md  RESTRUCTURING_COMPLETE.md  START_HERE.md  TESTING-README.md  TESTING_CHECKLIST.md  TOAST_NOTIFICATIONS.md  TOKEN_SAVING_FIX.md  WEB_APP_COMPLETE.md  WEB_APP_IMPLEMENTATION.md  WEB_APP_PROGRESS.md  addup.ps1  app.json  babel.config.js  cleanup.ps1  docker-compose.yml  (+17 more)
backends/: README.md
backends/rust-service/: Cargo.toml  Dockerfile  README.md
backends/rust-service/src/: config.rs  main.rs
backends/rust-service/src/handlers/: fitness.rs  leaderboard.rs  mod.rs  websocket.rs
backends/rust-service/src/middleware/: auth.rs
backends/rust-service/src/models/: types.rs
backends/rust-service/src/services/: cache.rs  fitness.rs  leaderboard.rs  mod.rs
backends/rust-service/src/utils/: mod.rs
components/: README.md  package-lock.json  package.json  vite.config.ts
db/: SCHEMA_FIXES.md  schema-v2.sql  schema.sql
design-system/: theme.md
scripts/: INDEX.md  QUICKSTART.txt  README.md  SETUP_GUIDE.md  google-fit-test.js  (+8 more)
(+509 files in other folders)
