[package]
name = "health-competition-rust"
version = "0.1.0"
edition = "2021"

[dependencies]
# Web framework
axum = { version = "0.7", features = ["ws", "macros"] }
tower = { version = "0.4", features = ["util"] }
tower-http = { version = "0.5", features = ["fs", "trace", "cors"] }

# Async runtime
tokio = { version = "1", features = ["full"] }
futures = "0.3"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Redis
redis = { version = "0.24", features = ["tokio-comp", "connection-manager"] }

# JWT
jsonwebtoken = "9"

# HTTP client
reqwest = { version = "0.11", features = ["json"] }

# Environment variables
dotenv = "0.15"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Time
chrono = { version = "0.4", features = ["serde"] }

# UUID
uuid = { version = "1", features = ["serde", "v4"] }

# Error handling
anyhow = "1"
thiserror = "1"

[dev-dependencies]
tokio-test = "0.4"

[[bin]]
name = "rust-service"
path = "src/main.rs"
